# arrayfire-featdetect-sample

./: CMakeLists.txt  featdetect.cpp
